# VisionModule

./: .gitignore  README.md  blimp_view_debug.py  visualize_dets.py
.github/workflows/: notify-parent.yml
cpp/src/stereo_vision/: package.xml
cpp/src/stereo_vision/calibration/: camera10_elp_left.yaml  camera10_elp_right.yaml  camera11_elp_right.yaml  camera13_elp_left.yaml  camera4_elp_left.yaml  camera7_elp_right.yaml  camera8_elp_right.yaml  camera9_elp_right.yaml
cpp/src/stereo_vision/include/utils/: publishers.hpp
cpp/src/stereo_vision/launch/: stereo_vision.launch.py
cpp/src/stereo_vision/models/: classes.txt  v10n_i8.rknn  yolov10n_v1.rknn  yolov10n_v5.rknn
cpp/src/stereo_vision/src/: main.cpp  stereo_camera_node.cpp
cpp/src/stereo_vision/src/utils/: publishers.cpp
cpp/src/stereo_vision_msgs/: CMakeLists.txt
cpp/src/stereo_vision_msgs/msg/: Detection.msg  PerformanceMetrics.msg
model_converter/: convert.py
python/: bulkCopyCompileCodeToPi.sh  copyCodeToPi.sh  copyCompileCodeToPi.sh
python/src/blimp_vision/: package.xml  setup.cfg  setup.py
python/src/blimp_vision/blimp_vision/: ball_tracker.py  blimp_vision_node.py  blob_detection.py  blob_detector.py  camera_node.py  contour_ball_detection.py  contour_goal_detection.py  main.py
python/src/blimp_vision/calibration/: camera12_elp_left.yaml  camera13_elp_right.yaml  camera4_left.yaml  camera4_right.yaml  camera7_elp_left.yaml
python/src/blimp_vision/launch/: 1_BurnCream.launch.py  2_SillyAh.launch.py  3_Turbo.launch.py  4_GameChamber.launch.py  5_GravyLongWay.launch.py  6_SuperBeef.launch.py  node.launch.py  vision_module.launch.py
python/src/blimp_vision/models/: yolov10n_v2.rknn  yolov10n_v6.rknn
python/src/blimp_vision/models/ball/yolo11n_rknn_model/: metadata.yaml
python/src/blimp_vision/models/balloon/balloon_v11n_rknn_model/: metadata.yaml
python/src/blimp_vision/models/balloon/balloon_v11s_rknn_model/: metadata.yaml
python/src/blimp_vision/models/goal/goal_v11n_rknn_model/: metadata.yaml
python/src/blimp_vision/models/goal/goal_v11s_rknn_model/: metadata.yaml
python/src/blimp_vision/models/goal/yolo11n_rknn_model/: metadata.yaml
python/src/blimp_vision/models/world/yoloworldL_rknn_model/: metadata.yaml
python/src/blimp_vision/models/world/yoloworldM_rknn_model/: metadata.yaml
python/src/blimp_vision/models/world/yoloworldS_rknn_model/: metadata.yaml
python/src/blimp_vision/utils/: allinone_dataset_creator.py
python/src/blimp_vision_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
python/src/blimp_vision_msgs/msg/: Detection.msg
ros2_vision_packages/src/stereo_vision/: CMakeLists.txt  package.xml
ros2_vision_packages/src/stereo_vision/calibration/: camera11_elp_left.yaml  camera12_elp_right.yaml  camera4_elp_right.yaml  camera8_elp_left.yaml  camera9_elp_left.yaml
ros2_vision_packages/src/stereo_vision/include/: VideoSaver.h  postprocess.h  rk_common.h  stereo_camera_node.hpp
ros2_vision_packages/src/stereo_vision/include/utils/: image_processing.hpp  publishers.hpp
ros2_vision_packages/src/stereo_vision/include/yolo/: yolo_inference.hpp  yolo_postprocess.hpp
ros2_vision_packages/src/stereo_vision/launch/: stereo_vision.launch.py
ros2_vision_packages/src/stereo_vision/models/: yolov10n_v2.rknn  yolov10n_v4.rknn
ros2_vision_packages/src/stereo_vision/src/: postprocess.cpp  stereo_camera_node.cpp  stereo_vision.cpp
ros2_vision_packages/src/stereo_vision/src/utils/: VideoSaver.h  image_processing.cpp  publishers.cpp
ros2_vision_packages/src/stereo_vision/src/yolo/: yolo_common.cpp  yolo_inference.cpp  yolo_postprocess.cpp
ros2_vision_packages/src/stereo_vision_msgs/: CMakeLists.txt  package.xml
ros2_vision_packages/src/stereo_vision_msgs/msg/: Detection.msg  PerformanceMetrics.msg
scripts/: contour_detection_testing.py  disp2depth_viewer.py  visualize_dets.py
